Add crud for nomenclature
